@@ -51,7 +51,6 @@ bind LEFTARROW "+left"
 bind RIGHTARROW "+right"
 bind LEFTSHIFT "+speed"
 bind LEFTCTRL "+movedown"
-bind F2 "inven"
 //bind F2 "menu_savegame"
 //bind F3 "menu_loadgame"
 bind F4 "menu_keys"
