@@ -2,7 +2,6 @@
 // todo: MERGE 
 
 bind TAB "leaderboard"
-bind F2 "inven"
 bind ENTER "invuse"
 bind ESCAPE "togglemenu"
 bind SPACE "+moveup"
