@@ -4,7 +4,6 @@
 
 unbindall
 
-bind ' "inven_drop"
 bind 1 "use Blaster"
 bind 2 "use Shotgun"
 bind 3 "use Super Shotgun"
