@@ -43,7 +43,6 @@ cvar_t* spectator_password;
 cvar_t* needpass;
 cvar_t* maxclients;
 cvar_t* maxspectators;
-cvar_t* maxentities;
 cvar_t* g_select_empty;
 cvar_t* dedicated;
 
