@@ -52,10 +52,6 @@ cvar_t*		r_customheight;
 cvar_t*		viewsize;
 
 
-// Structs for GLFW...
-
-
-
 // Global variables used internally by this module
 viddef_t	viddef;				// global video state; used by other modules
 HINSTANCE	reflib_library;		// Handle to refresh DLL 
